# rustars

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: app.rs  github.rs  main.rs
src/cargo/: crates.rs  mod.rs  project.rs
